--- a/templates/ModelViewTemplate.html
+++ b/templates/ModelViewTemplate.html
@@ -41,7 +41,6 @@ angular.module('{{view.appName}}', ['ui.bootstrap', 'smo'])
 		      	return angular.isObject(result) ? angular.toJson(result) : result;
     		};
   		});
-  		$scope.Result = $location.protocol() + '://' + $location.host() + ':' + $location.port() + $location.path() + '?model=' + 1 + '&view=' + 2 + '&id=' + 3;
 			{% for module in view.modules %}
 				{% if module|isNumericalModel %}
 			$scope.{{module.name}} = { name: "{{module.name}}", views: {} };
@@ -66,16 +65,6 @@ angular.module('{{view.appName}}', ['ui.bootstrap', 'smo'])
 
 {% block content %}
 <div ng-app="{{view.appName}}" ng-controller="{{view.controllerName}}">
-  <div>
-    $location.protocol() = <span ng-bind="$location.protocol()"></span> <br>
-    $location.host() = <span ng-bind="$location.host()"></span> <br>
-    $location.port() = <span ng-bind="$location.port()"></span> <br>
-    $location.path() = <span ng-bind="$location.path()"></span> <br>
-    $location.search() = <span ng-bind="$location.search()"></span> <br>
-    $location.hash() = <span ng-bind="$location.hash()"></span> <br>
-    $location.absUrl() = <span ng-bind="$location.absUrl()"></span> <br>
-    Result = <span ng-bind="Result"></span> <br>
-  </div>
   	<div class="tab-content">
 		{% for module in view.modules %}
 			<div class="tab-pane page-container {% if view|isActive:module %}active{% endif %}" id="{{module.name}}Content">
@@ -84,7 +73,7 @@ angular.module('{{view.appName}}', ['ui.bootstrap', 'smo'])
 					{% for block in module.modelBlocks %}
 						<div class="section">			
 							{% if block|isModelView %}
-								<div smo-model-view="{{block.name}}" model-name="{{module.name}}" view-type="{{block.ioType}}" auto-fetch="{{block.autoFetch|lower}}" record-Id="{{block.id}}"></div>
+								<div smo-model-view="{{block.name}}" model-name="{{module.name}}" view-type="{{block.ioType}}" auto-fetch="{{block.autoFetch|lower}}" record-Id="{{view.recordIdDict|getItem:block}}"></div>
 							{% endif %}
 						</div>
 					{% endfor %}
