--- a/templates/Base.html
+++ b/templates/Base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load SmoCustomFilters %}
 
 <!DOCTYPE HTML>
 <html lang="en">
@@ -39,14 +40,15 @@
 <!--             <span class="icon-bar"></span> -->
 <!--             <span class="icon-bar"></span> -->
           </button>
-          <a class="navbar-brand" href="{% url 'Home' %}">SmoWeb</a>
+          <a class="navbar-brand" href="/">SmoWeb</a>
         </div>
       	<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav" >
         		{% block navs %}
         		{% for routerName, router in pageView.router.registry.iteritems %}
+				    {% if not routerName|isBase %}
 				    <li class="dropdown">
-				      <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{routerName}}<span class="caret"></span></a>
+				      <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{router.label}}<span class="caret"></span></a>
 				      <ul class="dropdown-menu" role="menu">
 					{% for pageName, pageClass in router.pages.iteritems %}
 						<li><a href="/{{routerName}}/{{pageClass.name}}">{{pageClass.label}}</a></li>						
@@ -55,18 +57,8 @@
 <!-- 				        <li class="dropdown-header">Nav header</li> -->
 				      </ul>
 				    </li>
-				{% endfor %}
-				    <li class="dropdown">
-				      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Management <span class="caret"></span></a>
-				      <ul class="dropdown-menu" role="menu">
-				        <li><a href="{% url 'DataManagement:ImportCSV' %}">Import CSV</a></li>
-				        <li><a href="{% url 'DataManagement:DataExplorer' %}">Data Explorer</a></li>
-<!-- 				        <li class="divider"></li> -->
-<!-- 				        <li class="dropdown-header">Nav header</li> -->
-<!-- 				        <li><a href="{% url 'DataManagement:testView' %}">Test View</a></li> -->
-				      </ul>
-				    </li>
-				    <li><a href="{% url 'UnitConverter' %}">Unit Converter</a></li>      		
+				    {% endif %}
+				{% endfor %}    		
         		{% endblock %}
 			</ul>
 			<div class="logo">
