--- a/SmoWebBase/templates/SmoWebBase/ModelViewTemplate.html
+++ b/SmoWebBase/templates/SmoWebBase/ModelViewTemplate.html
@@ -1,4 +1,4 @@
-{% extends "Base.html" %}
+{% extends "SmoWebBase/Base.html" %}
 {% load staticfiles %}
 {% load SmoCustomFilters %}
 
@@ -76,6 +76,13 @@ angular.module('{{pageView.name}}', ['ui.bootstrap', 'smo'])
 							{% if block|isModelView %}
 								<div smo-model-view="{{block.name}}" model-name="{{module.name}}" view-type="{{block.ioType}}" auto-fetch="{{block.autoFetch|lower}}" view-record-id="{{pageView.recordIdDict|getItem:block}}"></div>
 							{% endif %}
+							{% if block|isHtmlSection %}
+								{% if block|isSrcFile %}
+									{% include block|getHtmlSectionUrl:pageView %}
+								{% else %}
+									<div>{{block.src}}</div>
+								{% endif %}
+							{% endif %}
 						</div>
 					{% endfor %}
 				{% endif %}
@@ -86,15 +93,16 @@ angular.module('{{pageView.name}}', ['ui.bootstrap', 'smo'])
 						</div>
 					</div>
 				{% endif %}
-				{% if module|isHtmlPage %}
-					<div class="tab-pane" id="{{module.name}}Content">
-					{% if module|isSrcFile %}
-						{% include module|getHtmlPageUrl:pageView %}
-					{% endif %}
-					{% if module|isSrcString %}
-						<div>{{module.src}}</div>
-					{% endif %}
-					</div>
+				{% if module|isHtmlModule %}
+					{% for block in module.modelBlocks %}
+						{% if block|isHtmlSection %}
+							{% if block|isSrcFile %}
+								{% include block|getHtmlSectionUrl:pageView %}
+							{% else %}
+								<div>{{block.src}}</div>
+							{% endif %}
+						{% endif %}	
+					{% endfor %}
 				{% endif %}
 			</div>
 		{% endfor %}
