--- a/ThermoFluids/templates/documentation/html/PipeFlowDoc.html
+++ b/ThermoFluids/templates/documentation/html/PipeFlowDoc.html
@@ -1,5 +1,5 @@
-<div class="document" id="flow-resistance">
-<h1 class="title">Flow resistance</h1>
+<div class="document" id="pipe-flow">
+<h1 class="title">Pipe Flow</h1>
 <div class="figure align-center">
 <object data="/static/ThermoFluids/StraightPipe.svg" style="width: 100%;" type="image/svg+xml">
 /static/ThermoFluids/StraightPipe.svg</object>
