Fluid info literature references
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/static/css/SmoInputOutputView.css
+++ b/SmoWebBase/static/css/SmoInputOutputView.css
@@ -16,6 +16,12 @@
 	vertical-align:top;
 }
 
+/* View group */
+[smo-view-group] {
+	margin-left: 20px;
+}
+
+
 /* Variants:
  - original blue color: #0875CA
  - darker orange: #B68700
