--- a/ThermoFluids/templates/ThermoFluids/blocks/FluidInfoLitReferences.html
+++ b/ThermoFluids/templates/ThermoFluids/blocks/FluidInfoLitReferences.html
@@ -1,4 +1,4 @@
-<div ng-if="FluidInfo.resultViewCommunicator.dataReceived">
+<div ng-if="FluidInfo.resultViewCommunicator.dataReceived" style="margin-left: 20px;">
 <h1>Literature References</h1>				
 {% verbatim %}
 <div ng-repeat="pair in FluidInfo.resultViewCommunicator.data.values.references" ng-show="pair[1]">
