--- a/SmoWebBase/static/css/SmoInputOutputView.css
+++ b/SmoWebBase/static/css/SmoInputOutputView.css
@@ -230,6 +230,7 @@
 	z-index: 10000;
 	background: rgba(0, 0, 0, 0.8);
 	padding-left: 200px;
+	padding-right: 20px;
 	padding-top: 100px;
 	overflow: scroll;
 }
