Removed horizontal navigation bar border. Removed dashboard.css
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/static/css/Base.css
+++ b/SmoWebBase/static/css/Base.css
@@ -20,7 +20,14 @@ body {
 	margin: 0px;
 }
 
+
+
 /* Horizontal navigation bar */ 
+
+.navbar-fixed-top {
+    border: none;
+}
+
 .navbar-default {
     background-color: black; /*#F8F8F8*/
     border-color: #E7E7E7;
